Use OnDeviceRemovedCleanup to clear ephemeral WebUSB permissions

Since an ephemeral permission is revoked when the device is disconnected
we must be careful to generate the device removal events before revoking
the permission or else no context will have permission to receive them.
The UsbService::Observer::OnDeviceRemovedCleanup function was added to
solve this problem for the chrome.usb API and the same issue exists for
the WebUSB API.

Bug: 737321
Change-Id: I3c38c05115c46e59079fdf1ea1ca3711931ea3ef
Reviewed-on: https://chromium-review.googlesource.com/551196
Reviewed-by: Vincent Scheib <scheib@chromium.org>
Commit-Queue: Reilly Grant <reillyg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#483107}
Former-commit-id: 4ea659fef8324b9da33daf7895ed8b265618d17e