chrome/browser/usb/usb_browsertest.cc
@@ -8,8 +8,10 @@
 
 #include "base/command_line.h"
 #include "base/memory/ref_counted.h"
+#include "chrome/browser/profiles/profile.h"
 #include "chrome/browser/ui/browser.h"
 #include "chrome/browser/ui/tabs/tab_strip_model.h"
+#include "chrome/browser/usb/usb_chooser_context_factory.h"
 #include "chrome/browser/usb/usb_chooser_controller.h"
 #include "chrome/test/base/in_process_browser_test.h"
 #include "chrome/test/base/ui_test_utils.h"
@@ -99,57 +101,158 @@ class WebUsbTest : public InProcessBrowserTest {
   void SetUpOnMainThread() override {
     embedded_test_server()->ServeFilesFromSourceDirectory("content/test/data");
     ASSERT_TRUE(embedded_test_server()->Start());
-
     device_client_.reset(new MockDeviceClient());
-    scoped_refptr<MockUsbDevice> mock_device(
-        new MockUsbDevice(0, 0, "Test Manufacturer", "Test Device", "123456"));
-    device_client_->usb_service()->AddDevice(mock_device);
+    AddMockDevice("123456");
+
+    // Force the UsbChooserContext to be created before the test begins. This
+    // ensures that it is created before any instances of DeviceManagerImpl and
+    // thus may expose ordering bugs not normally encountered.
+    UsbChooserContextFactory::GetForProfile(browser()->profile());
+
+    ui_test_utils::NavigateToURL(
+        browser(),
+        embedded_test_server()->GetURL("localhost", "/simple_page.html"));
+
+    RenderFrameHost* render_frame_host =
+        browser()->tab_strip_model()->GetActiveWebContents()->GetMainFrame();
+    EXPECT_THAT(render_frame_host->GetLastCommittedOrigin().Serialize(),
+                testing::StartsWith("http://localhost:"));
+    render_frame_host->GetInterfaceRegistry()->AddInterface(
+        base::Bind(&FakeChooserService::Create, render_frame_host));
+  }
+
+  void AddMockDevice(const std::string& serial_number) {
+    DCHECK(!mock_device_);
+    mock_device_ = base::MakeRefCounted<MockUsbDevice>(
+        0, 0, "Test Manufacturer", "Test Device", serial_number);
+    device_client_->usb_service()->AddDevice(mock_device_);
+  }
+
+  void RemoveMockDevice() {
+    DCHECK(mock_device_);
+    device_client_->usb_service()->RemoveDevice(mock_device_);
+    mock_device_ = nullptr;
   }
 
  private:
   std::unique_ptr<MockDeviceClient> device_client_;
+  scoped_refptr<MockUsbDevice> mock_device_;
 };
 
 IN_PROC_BROWSER_TEST_F(WebUsbTest, RequestAndGetDevices) {
-  ui_test_utils::NavigateToURL(
-      browser(),
-      embedded_test_server()->GetURL("localhost", "/simple_page.html"));
   content::WebContents* web_contents =
       browser()->tab_strip_model()->GetActiveWebContents();
-  RenderFrameHost* render_frame_host = web_contents->GetMainFrame();
-  EXPECT_THAT(render_frame_host->GetLastCommittedOrigin().Serialize(),
-              testing::StartsWith("http://localhost:"));
 
-  render_frame_host->GetInterfaceRegistry()->AddInterface(
-      base::Bind(&FakeChooserService::Create, render_frame_host));
-
-  std::string result;
-  EXPECT_TRUE(content::ExecuteScriptAndExtractString(
+  int int_result;
+  EXPECT_TRUE(content::ExecuteScriptAndExtractInt(
       web_contents,
       "navigator.usb.getDevices()"
       "    .then(devices => {"
-      "        domAutomationController.send(devices.length.toString());"
-      "     });",
-      &result));
-  EXPECT_EQ("0", result);
+      "        domAutomationController.send(devices.length);"
+      "    });",
+      &int_result));
+  EXPECT_EQ(0, int_result);
 
+  std::string result;
   EXPECT_TRUE(content::ExecuteScriptAndExtractString(
       web_contents,
       "navigator.usb.requestDevice({ filters: [ { vendorId: 0 } ] })"
       "    .then(device => {"
       "        domAutomationController.send(device.serialNumber);"
-      "     });",
+      "    });",
       &result));
   EXPECT_EQ("123456", result);
 
-  EXPECT_TRUE(content::ExecuteScriptAndExtractString(
+  EXPECT_TRUE(content::ExecuteScriptAndExtractInt(
       web_contents,
       "navigator.usb.getDevices()"
       "    .then(devices => {"
-      "        domAutomationController.send(devices.length.toString());"
-      "     });",
+      "        domAutomationController.send(devices.length);"
+      "    });",
+      &int_result));
+  EXPECT_EQ(1, int_result);
+}
+
+IN_PROC_BROWSER_TEST_F(WebUsbTest, AddRemoveDevice) {
+  content::WebContents* web_contents =
+      browser()->tab_strip_model()->GetActiveWebContents();
+
+  std::string result;
+  EXPECT_TRUE(content::ExecuteScriptAndExtractString(
+      web_contents,
+      "navigator.usb.requestDevice({ filters: [ { vendorId: 0 } ] })"
+      "    .then(device => {"
+      "        domAutomationController.send(device.serialNumber);"
+      "    });"
+
+      "var deviceAdded = null;"
+      "navigator.usb.addEventListener('connect', e => {"
+      "    deviceAdded = e.device;"
+      "});"
+
+      "var deviceRemoved = null;"
+      "navigator.usb.addEventListener('disconnect', e => {"
+      "    deviceRemoved = e.device;"
+      "});",
       &result));
-  EXPECT_EQ("1", result);
+  EXPECT_EQ("123456", result);
+
+  RemoveMockDevice();
+  EXPECT_TRUE(content::ExecuteScriptAndExtractString(
+      web_contents,
+      "if (deviceRemoved === null) {"
+      "  domAutomationController.send('null');"
+      "} else {"
+      "  domAutomationController.send(deviceRemoved.serialNumber);"
+      "}",
+      &result));
+  EXPECT_EQ("123456", result);
+
+  AddMockDevice("123456");
+  EXPECT_TRUE(content::ExecuteScriptAndExtractString(
+      web_contents,
+      "if (deviceAdded === null) {"
+      "  domAutomationController.send('null');"
+      "} else {"
+      "  domAutomationController.send(deviceAdded.serialNumber);"
+      "}",
+      &result));
+  EXPECT_EQ("123456", result);
+}
+
+IN_PROC_BROWSER_TEST_F(WebUsbTest, AddRemoveDeviceEphemeral) {
+  content::WebContents* web_contents =
+      browser()->tab_strip_model()->GetActiveWebContents();
+
+  // Replace the default mock device with one that has no serial number.
+  RemoveMockDevice();
+  AddMockDevice("");
+
+  std::string result;
+  EXPECT_TRUE(content::ExecuteScriptAndExtractString(
+      web_contents,
+      "navigator.usb.requestDevice({ filters: [ { vendorId: 0 } ] })"
+      "    .then(device => {"
+      "        domAutomationController.send(device.serialNumber);"
+      "    });"
+
+      "var deviceRemoved = null;"
+      "navigator.usb.addEventListener('disconnect', e => {"
+      "    deviceRemoved = e.device;"
+      "});",
+      &result));
+  EXPECT_EQ("", result);
+
+  RemoveMockDevice();
+  EXPECT_TRUE(content::ExecuteScriptAndExtractString(
+      web_contents,
+      "if (deviceRemoved === null) {"
+      "  domAutomationController.send('null');"
+      "} else {"
+      "  domAutomationController.send(deviceRemoved.serialNumber);"
+      "}",
+      &result));
+  EXPECT_EQ("", result);
 }
 
 }  // namespace
